Fix upgrades overlapping on the opponent's board Remove some unneeded css classes

--- a/less/cards.less
+++ b/less/cards.less
@@ -5,6 +5,7 @@
   vertical-align: middle;
   display: inline-block;
   user-select: none;
+  position: relative;
 }
 
 .card-frame {
@@ -287,41 +288,6 @@
 
 .generate-upgrades(10, 1);
 
-.card-dupe {
-  margin-bottom: @upgrade-offset;
-  margin-top: -(@upgrade-offset + @card-height);
-
-  &.small {
-    margin-top: -(@upgrade-offset + @card-sm-height);
-  }
-
-  &.large {
-    margin-top: -(@upgrade-offset-lg + @card-lg-height);
-  }
-
-  &.x-large {
-    margin-top: -(@upgrade-offset-xl + @card-xl-height);
-  }
-}
-
-.generate-card-dupes(@n, @i: 1) when (@i =< @n) {
-  .card-dupe-@{i} {
-    z-index: @layer-cards - @i;
-    top: -((@i - 1) * @upgrade-offset);
-
-    &.large {
-      top: -((@i - 1) * @upgrade-offset-lg);
-    }
-
-    &.x-large {
-      top: -((@i - 1) * @upgrade-offset-xl);
-    }
-  }
-  .generate-card-dupes(@n, (@i + 1));
-}
-
-.generate-card-dupes(5, 1);
-
 .card-type-faction.horizontal {
   margin: 10px 0 0 0;
 }
@@ -392,14 +358,6 @@
       top: 50%;
     }
   }
-}
-
-.upgrade-power {
-  background-color: fade(@power-color, 50%);
-}
-
-.strength {
-  background-color: @strength-color;
 }
 
 .damage {
