--- a/less/gameboard.less
+++ b/less/gameboard.less
@@ -846,12 +846,6 @@ hr.phasestart {
   line-height: 15px;
 }
 
-.auto {
-  .glyphicon {
-      color: @strength-color;
-  }
-}
-
 .prompt-button {
   display: flex;
   justify-content: center;
