--- a/less/variables.less
+++ b/less/variables.less
@@ -11,16 +11,6 @@
 
 @table-bg-accent: fade(@brand-primary, 45%);
 
-@military-icon-color: #ca9c81;
-@military-text-color: #743e3e;
-@political-icon-color: #b2bccd;
-@political-text-color: #41658a;
-
-@dupe-color: rgba(0,128,0,0.85);
-@power-color: rgba(0,0,128,0.85);
-@strength-color: rgba(128,0,0,0.85);
-@venom-color: rgba(29, 145, 163, 0.85);
-
 @card-width: 65px;
 @card-height: 91px;
 
